DEV_01 building up the matrix class